[tool.poetry]
name = "shaman-project"
version = "0.1.0"
description = ""
authors = ["Sophie Robert <sophie.robert@atos.net>"]
packages = [
    { include = "bbo", from = "shaman_project/" },
    { include = "bb_wrapper", from = "shaman_project/" },
    { include = "shaman_api", from = "shaman_project/" },
    { include = "shaman_worker", from = "shaman_project/" },
    { include = "shaman_core", from = "shaman_project/" },
]

[tool.poetry.dependencies]
python = "^3.6.1"
fastapi = { optional = true, version = "^0.61.1" }
uvicorn = { optional = true, version = "^0.11.8" }
arq = { optional = true, version = "^0.19" }
motor = { optional = true, version = "^2.2.0" }
pydantic = { optional = true, version = "^1.6.1" }
requests = { optional = true, version = "^2.24.0" }
typer = { optional = true, version = "^0.3.2" }
PyYAML = { optional = true, version = "^5.3.1" }
prometheus-client = { optional = true, version = "^0.8.0" }
starlette-exporter = { optional = true, version = "^0.4.1" }
httpx = { optional = true, version = "^0.14.3" }
numpy = { optional = true, version = "^1.19.2" }
scikit-learn = { optional = true, version = "^0.23.2" }
cma = { optional = true, version = "^3.0.3" }
scipy = { optional = true, version = "^1.5.2" }
pandas = { optional = true, version = "^1.1.2" }
loguru = "^0.5.3"
pip = "^20.2.4"
install = "^1.3.4"
mkdocs-material = "^6.1.2"
mknotebooks = "^0.6.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
invoke = "^1.4.1"
devtools = "^0.6"
watchgod = "^0.6"
coverage-badge = "^1.0.1"
mkdocs = "^1.1.2"
mkdocs-material-extensions = "^1.0.1"

[tool.poetry.extras]
bb-wrapper = ["pydantic", "requests", "typer", "PyYAML"]
bbo = ["numpy", "scikit-learn", "cma", "scipy", "pandas"]
shaman-api = ["fastapi", "uvicorn", "arq", "motor", "starlette-exporter", "typer"]
shaman-worker = ["arq", "prometheus-client", "httpx", "pydantic"]
shaman-core = ["pydantic","httpx","pyyaml"]

[tool.poetry.scripts]
shaman-api = "shaman_api.cli:cli"
shaman-install = "bb_wrapper.tunable_component.install_component:cli"
shaman-optimize = "bb_wrapper.run_experiment:cli"

[tool.autopep8]
max_line_length = 80

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

